tests/NormalTests/paczka1/small_fuzzy/50943318.err
Error in line 1: xWe7C7 A40 77,6
Error in line 10: xWe7C7 A809 142,3
